
	* Start to migrate the test code away from CppUnit,
	  since ithe typeinfo magic it uses upsets GCC < 3.2
	  Instead, switch to some fairly basic internal
	  helpers, since we never did much with CppUnit
	  anyway.
	* Start adding TypeInfo support to the stub server
	  (using hard coded data, no dependancy on an
	  external source), so it be a bit more realistic.

Tuesday, 13th May 2003, Ron Steinke <rsteinke@w-link.net>

	* More perl bindings memory management stuff,
	  primarily handling the World::Destroyed signal.
	* Used templates to simplify the perl typemap
	  stuff a bit, changed the #includes in the modules
	  to only include the type conversion code
	  each needs.

Tuesday, 13th May 2003, Ron Steinke <rsteinke@w-link.net>

	* Gave the perl bindings better memory management.
	  The biggest change is that rooms are now passed
	  around as a lobby pointer and id string, so we
	  don't get seg faults if room references go stale.
	  Most of the rest is incrementing/decrementing
	  the refcounts of the perl SV's that own Connection
	  and Player instances.
	* Added some getConnection()/getLobby()/getPlayer()
	  accessors to various classes, as needed for the
	  above memory management code.
	* Added an Interface class, for the beginning
	  of incorporating handling of the soon-to-be-defined
	  Atlas interface ops (old janus functionality).

Saturday, 10th May 2003, Al Riddoch <alriddoch@zepler.org>

	* Incremented version to 0.9.8.1 for a patch release with
	  working perl bindings.

Saturday, 10th May 2003, Ron Steinke <rsteinke@w-link.net>

	* Changed perl bindings build stuff to account
	  for the @WFMATH_CFLAGS@ @ATLAS_CFLAGS@ -> @WF_CFLAGS@
	  change
	* Added a check for the SigC module to the check for
	  the sigcperl lib in configure.in
	* Got rid of OLD_SIGC_1_0 stuff in bindings, since we're
	  now requiring libsigc++ 1.2

Friday, 9th May 2003, James Turner <james@worldforge.org>

	* Incremented version to 0.9.8 for stable release.
